# lens

./: .env.example  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
apps/: .gitignore
apps/ai_worker/: README.md  pyproject.toml
apps/ai_worker/src/lens_ai/: __init__.py  main.py  settings.py
apps/api/: README.md  pyproject.toml
apps/api/src/lens_api/: __init__.py  auth.py  composition.py  correlation.py  errors.py  main.py  production.py  rate_limit.py  routers.py  schemas.py  settings.py
apps/api/tests/: _fakes.py  test_api.py  test_api_history_diff.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/lens_cli/: __init__.py  commands.py  composition.py  main.py  settings.py
apps/cli/tests/: _fakes.py  test_cli.py  test_cli_history_diff.py  test_cli_notifications.py
apps/crawler_worker/: README.md  pyproject.toml
apps/crawler_worker/src/lens_crawler/: __init__.py  main.py  settings.py
apps/crawler_worker/tests/: test_crawler_worker.py
apps/notifier_worker/: .gitignore  README.md  pyproject.toml
apps/notifier_worker/src/lens_notifier/: __init__.py  main.py  production.py  settings.py
apps/notifier_worker/tests/: test_notifier_worker.py
apps/scheduler/: README.md  pyproject.toml
apps/scheduler/src/lens_scheduler/: __init__.py  main.py  settings.py
apps/scheduler/tests/: test_scheduler.py
apps/web/: .env.example  .gitignore  README.md  nuxt.config.ts  package.json  pnpm-workspace.yaml  vitest.config.ts
apps/web/app/: app.vue
apps/web/app/assets/: theme.ts
apps/web/app/assets/css/: main.css
apps/web/app/components/diff/: DiffViewer.vue
apps/web/app/components/layout/: AppPageHeader.vue  AppSidebar.vue  AppTopbar.vue  CornerMarks.vue  ThemeToggle.vue
apps/web/app/composables/: useApi.ts  useAuth.ts  useDarkMode.ts  usePaginatedQuery.ts
apps/web/app/layouts/: auth.vue  default.vue
apps/web/app/middleware/: auth.global.ts  scope.ts
apps/web/app/pages/: index.vue  login.vue
apps/web/app/pages/admin/: api-keys.vue  dlq.vue  settings.vue
apps/web/app/pages/bindings/: index.vue
apps/web/app/pages/changes/: [id].vue
apps/web/app/pages/channels/: index.vue
apps/web/app/pages/domains/: [id].vue  index.vue
apps/web/app/pages/imports/: index.vue
apps/web/app/pages/urls/: [id].vue  index.vue
apps/web/app/plugins/: auth.ts  vue-query.ts
apps/web/app/stores/: auth.ts  ui.ts
apps/web/app/utils/: errors.ts
apps/web/server/api/: [...path].ts
apps/web/server/api/auth/: session.get.ts
apps/web/server/middleware/: csrf.ts
apps/web/server/routes/auth/: login.post.ts  logout.post.ts
apps/web/server/utils/: session.test.ts  session.ts
deploy/: .gitignore
deploy/compose/: docker-compose.yml
deploy/docker/: base.Dockerfile  web.Dockerfile
deploy/k8s/: README.md
docs/: 01-overview.md  02-architecture.md  03-domain-model.md  04-content-pipeline.md  05-data-and-storage.md  06-messaging-and-scaling.md  07-api-reference.md  08-message-contracts.md  09-configuration.md  10-ai-enrichment.md  11-deployment-and-operations.md  12-development.md  README.md
libs/: .gitignore
libs/application/: .gitignore  README.md  pyproject.toml
libs/application/src/lens_application/: __init__.py  dto.py  errors.py  pipeline.py  ports.py
libs/application/src/lens_application/use_cases/: __init__.py  _base.py  _mapping.py  api_keys.py  auto_learning.py  categories.py  channels.py  crawl.py  domains.py  enrich.py  import_export.py  notifications.py  scaling.py  urls.py
libs/application/tests/: _fakes.py  _pipeline_fakes.py  test_crawl.py  test_crud.py  test_import_export.py  test_notifications.py
libs/common/: README.md  pyproject.toml
libs/common/src/lens_common/: __init__.py  config.py  di.py  errors.py  health.py  lifecycle.py  logging.py  metrics.py  ports.py  retry.py  tracing.py  types.py
libs/common/tests/: test_config.py  test_di.py  test_errors.py  test_health.py  test_kernel.py  test_lifecycle.py  test_logging.py  test_metrics.py  test_retry.py  test_smoke.py  test_tracing.py
libs/domain/: README.md  pyproject.toml
libs/domain/src/lens_domain/: __init__.py  entities.py  enums.py  errors.py  events.py  ids.py  services.py  value_objects.py
libs/domain/tests/: test_entities.py  test_events.py  test_ids.py  test_notification_router.py  test_pipeline_entities.py  test_services.py  test_significance.py  test_value_objects.py
libs/infrastructure/: README.md  pyproject.toml
libs/infrastructure/migrations/: alembic.ini  env.py
libs/infrastructure/migrations/versions/: 0001_initial.py  0002_pipeline.py  0003_notifications.py  0004_site_profiles.py  0005_ai_enrichment.py  0006_auto_learning.py
libs/infrastructure/src/lens_infrastructure/: __init__.py  ai_classifier.py  ai_embedding.py  auto_learning.py  broker.py  clock.py  crawler.py  dead_letter.py  differ.py  dynamic_config.py  idempotency.py  locks.py  metrics.py  normalizer.py  notifier.py  outbox_relay.py  retention.py  secret_provider.py  secrets.py  storage.py  template_renderer.py  throttle.py
libs/infrastructure/src/lens_infrastructure/db/: base.py  mapping.py  models.py  repositories.py  unit_of_work.py
libs/infrastructure/src/lens_infrastructure/notify/templates/: change.txt  error.txt  no_change.txt
libs/infrastructure/src/lens_infrastructure/processing/: __init__.py  classifier.py  fingerprint.py  scorer.py  zones.py
libs/infrastructure/tests/: test_blob.py  test_broker_and_lock.py  test_clock.py  test_l2_l4_adapters.py  test_mappers.py  test_models.py  test_notification_adapters.py  test_outbox_relay.py  test_pipeline_adapters.py  test_pipeline_mappers.py
