[project]
name = "lens-ai"
version = "0.1.0"
description = "AI enrichment worker: embeddings, change classification (optional, AI_ENABLED)"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "lens-common",
    "lens-domain",
    "lens-application",
    "lens-infrastructure",
    "faststream[rabbit]>=0.7",
    "openai>=2.0",
    "instructor>=1.5",
    "sentence-transformers>=4.0",
    "pgvector>=0.4",
    "scikit-learn>=1.6",
    "hdbscan>=0.8",
    "httpx>=0.28",
]

[project.scripts]
lens-ai = "lens_ai.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_ai", "pyproject.toml"]

[tool.uv.sources]
lens-common = { workspace = true }
lens-domain = { workspace = true }
lens-application = { workspace = true }
lens-infrastructure = { workspace = true }
