[project]
name = "lens-cli"
version = "0.1.0"
description = "Operator CLI: import/export setup, manage entities, run maintenance"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "lens-common",
    "lens-domain",
    "lens-application",
    "lens-infrastructure",
    "typer>=0.15",
    "rich>=14.0",
]

[project.scripts]
lens = "lens_cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_cli", "pyproject.toml"]

[tool.uv.sources]
lens-common = { workspace = true }
lens-domain = { workspace = true }
lens-application = { workspace = true }
lens-infrastructure = { workspace = true }
