[project]
name = "lens-notifier"
version = "0.1.0"
description = "Notifier worker: routes change events to channels (apprise), sends"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "lens-common",
    "lens-domain",
    "lens-application",
    "lens-infrastructure",
    "faststream[rabbit]>=0.7",
    "apprise>=1.9",
    "jinja2>=3.1",
]

[project.scripts]
lens-notifier = "lens_notifier.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_notifier"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_notifier", "pyproject.toml"]

[tool.uv.sources]
lens-common = { workspace = true }
lens-domain = { workspace = true }
lens-application = { workspace = true }
lens-infrastructure = { workspace = true }
