[project]
name = "lens-scheduler"
version = "0.1.0"
description = "Scheduler: enqueues due URLs as crawl tasks"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "lens-common",
    "lens-domain",
    "lens-application",
    "lens-infrastructure",
    "faststream[rabbit]>=0.7",
]

[project.scripts]
lens-scheduler = "lens_scheduler.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_scheduler"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_scheduler", "pyproject.toml"]

[tool.uv.sources]
lens-common = { workspace = true }
lens-domain = { workspace = true }
lens-application = { workspace = true }
lens-infrastructure = { workspace = true }
