[project]
name = "lens-common"
version = "0.1.0"
description = "Shared kernel: config, logging, errors, ports, DI, types"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=26.0",
    "uuid7>=0.1",
    "prometheus-client>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_common"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_common", "pyproject.toml"]
