[project]
name = "lens-domain"
version = "0.1.0"
description = "Pure business model: entities, value objects, domain services, events"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "pydantic>=2.10,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens_domain"]

[tool.hatch.build.targets.sdist]
include = ["src/lens_domain", "pyproject.toml"]
